# SetVRChatPriority

./: .gitignore  Cargo.toml  README.md  SetPriorityVRChat.cpp  SetPriorityVRChat.vcxproj  SetPriorityVRChat.vcxproj.filters  build.rs  colormod.h
res/windows/: manifest.xml
src/: SetPriorityVRChat.cpp  main.rs  types.rs  utils.rs
src/termcolor/: termcolor.hpp
x64/Debug/: SetPriorityVRChat.exe.recipe  SetPriorityVRChat.ilk  vc143.idb
x64/Debug/SetPrior.b3d6ff36.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SetPriorityVRChat.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: SetPriorityVRChat.exe.recipe  SetPriorityVRChat.iobj  SetPriorityVRChat.ipdb
x64/Release/SetPrior.b3d6ff36.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SetPriorityVRChat.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
