[package]
name = "vrc-priority"
version = "0.1.0"
authors = ["BlueberryWolf", "Kawaxte"]
edition = "2021"
rust-version = "1.77.2"
readme = "README.md"
description = "A workaround for Easy Anti-Cheat restriction on setting VRChat process priority."
repository = "https://github.com/Kawaxte/vrc-priority-rs"
license-file = "LICENSE"
build = "build.rs"

[dependencies]
crossterm = "0.27.0"
winreg = "0.52.0"

[build-dependencies]
dotenvy = "0.15.7"
tauri-winres = "0.1.1"
